--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "dependencies": {
-    "cors": "^2.8.6",
-    "ejs": "^4.0.1",
-    "express": "^5.2.1",
-    "pdfkit": "^0.17.2",
-    "sequelize": "^6.37.7",
-    "sqlite3": "^5.1.7"
-  }
+    "name": "dragongamer",
+    "version": "1.0.0",
+    "description": "",
+    "types": "module",
+    "main": "server.js",
+    "dependencies": {
+        "cors": "^2.8.6",
+        "ejs": "^4.0.1",
+        "express": "^5.2.1",
+        "pdfkit": "^0.17.2",
+        "sequelize": "^6.37.7",
+        "sqlite3": "^5.1.7"
+    }
 }
